# pystum3-gui

./: .gitignore  README.md  buildozer.spec  config.json  main.py  pmake.py  pyproject.toml
.github/workflows/: build.yml  release.yml
src/: main.py
